# sita

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE.md  README.md  deva.txt  main.cpp  meson.build  देवनागरी.txt
include/: GEM.md  gui.h  oglutil.h  shader.h  terminal.h  terminal_parser.h  terminal_view.h  text_renderer.h  tty.h  utils.h  wayland_text_input.h
script/: a.out  real.cpp  trash.cpp
src/: GEMINI.md  gui.cpp  oglutil.cpp  shader.cpp  terminal.cpp  terminal_parser.cpp  terminal_view.cpp  text_renderer.cpp  tty.cpp  utils.cpp  wayland_text_input.cpp
